# spacy-syllables

./: .gitignore  .travis.yml  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
spacy_syllables/: __init__.py
tests/: test_all.py
