[virtualenvs]
create = false

[tool.poetry]
name = "spacy_syllables"
version = "3.0.1"
description = "Multilingual syllable annotation pipeline component for spacy"
authors = ["sloev <johannes.valbjorn@gmail.com>"]
homepage = "https://github.com/sloev/spacy-syllables"
repository = "https://github.com/sloev/spacy-syllables"
keywords = ["spacy", "pyphen", "syllable", "syllables"]
license = "MIT"
readme = "README.md"
classifiers=[
        "Development Status :: 6 - Mature",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
exclude = ["tests"]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^3.0.3"
pyphen = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
nox = "^2019.11.9"
pylint = "^2.4.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
