[metadata]
name = spacy_syllables
version = 3.0.2
author = sloev
author_email = johannes.valbjorn@gmail.com
url = https://github.com/sloev/spacy-syllables
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = spacy, pyphen, syllable, syllables
license = MIT
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    spacy >= 3.0.3
    spacy >= 3.0.3
    pyphen >= 0.10.0

[options.extras_require]
dev = 
    black >= 22.1.0
    pytest >= 7.2.2 

[options.package_data]
* = README.md
